--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -86,6 +86,7 @@
     cursor: pointer;
     border: none;
     background-color: transparent;
+    display: none;
 }
 
 .menuIcon svg {
@@ -132,4 +133,38 @@
 }
 
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+    .header {
+        justify-content: space-between;
+    }
+
+    .nav {
+        display: none;
+        position: fixed;
+        top: 70px;
+        left: 0;
+        right: 0;
+        background-color: var(--color-brand--main);
+        padding: 20px 0;
+        flex-direction: column;
+        gap: 20px;
+        transition: all 0.3s;
+    }
+
+    .nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .menuIcon {
+        display: block;
+    }
+
+    .buttons {
+        display: none;
+    }
+
+    .buttonsScrolled {
+        display: none;
+    }
+}
