--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     --color-brand--main: #e27c00;
     --color-brand--500: #ffa500;
     --color-brand--400: #ffc71b;
+    --color-brand--transparent: rgb(226, 124, 0, 0.5);
     --color-brand--dark: #451a03;
     --color-brand--light: rgb(255, 252, 234, 0.7);
 
