--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -119,7 +119,7 @@
     position: absolute;
     top: 70px;
     right: 0;
-    background-color: var(--color-brand--main);
+    background-color: var(--color-brand--transparent);
     width: 100%;
     padding: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -148,6 +148,10 @@
 }
 
 @media (max-width: 1024px) {
+    .header {
+        justify-content: space-between;
+    }
+
     .buttons {
         display: none;
     }
@@ -166,6 +170,10 @@
 }
 
 @media (max-width: 768px) {
+    .header {
+        justify-content: space-between;
+    }
+
     .nav {
         display: none;
     }
