--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,9 +1,9 @@
 .about {
   position: relative;
-  background-image: url("/about.jpg"); /* Replace with your desired image */
+  /* background-image: url("/about.jpg");
   background-size: cover;
-  background-position: center;
-  color: var(--color-white);
+  background-position: center; */
+  color: #fff;
   padding: 100px 20px;
   text-align: center;
   display: flex;
@@ -12,6 +12,7 @@
   justify-content: center;
   height: 80vh;
   overflow: hidden;
+  background-color: var(--color-brand--500);
 }
 
 .about .overlay {
@@ -20,7 +21,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+  /* background: rgba(0, 0, 0, 0.5); */
   z-index: 1;
 }
 
