--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -117,11 +117,13 @@
 .menu {
     display: none;
     position: absolute;
+    font-size: 2rem;
+    font-weight: 600;
     top: 70px;
     right: 0;
     background-color: var(--color-brand--transparent);
     width: 100%;
-    padding: 20px;
+    padding: 10px 20px 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.3s;
 }
@@ -134,6 +136,7 @@
     flex-direction: column;
     gap: 15px;
 }
+
 
 .menu ul li a {
     text-decoration: none;
