--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -10,30 +10,37 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin-top: 80px;
 }
 
 .team {
-    max-width: 1000px;
+    max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+    row-gap: 50px;
     margin: 80px auto;
+    padding: 20px;
     overflow: hidden;
 }
 
 .cardWrapper {
-    width: 400px;
-    height: 500px;
+    width: 100%;
+    /* Adjusted to fit the grid */
+    max-width: 300px;
+    /* Optional: Set a max-width for better alignment */
+    margin: auto;
+    /* Center cards within the grid */
     position: relative;
 }
 
 .card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 350px;
-    height: 450px;
+    position: relative;
+    /* Changed from absolute for better layout control */
+    width: 100%;
+    /* Fit the grid container */
+    aspect-ratio: 7 / 9;
+    /* Maintains the width-to-height ratio */
     border-radius: 16px;
     overflow: hidden;
     box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
@@ -42,8 +49,8 @@
 
 .card .cardImage {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
@@ -98,7 +105,6 @@
     opacity: 1;
 }
 
-
 .socialIcons li a:hover svg {
     color: #fff;
 }
@@ -142,4 +148,11 @@
     line-height: 2.5rem;
     color: #333;
     font-weight: 300;
+}
+
+
+@media (min-width: 1024px) {
+    .team {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
