--- a/src/components/SliderGallery/SliderGallery.module.css
+++ b/src/components/SliderGallery/SliderGallery.module.css
@@ -1,7 +1,8 @@
 /* Container for the slider */
 .sliderContainer {
     position: relative;
-    width: 1000px;
+    width: 80%;
+    max-width: 800px;
     margin: 80px auto;
     overflow: hidden;
 }
@@ -22,27 +23,74 @@
 
 /* The slider track */
 .slider {
+    display: flex;
     transition: transform 0.5s ease-in-out;
 }
 
 /* Each slide */
 .slide {
-    opacity: 1;
+    position: absolute;
     min-width: 100%;
-    padding: auto;
-    transition: opacity 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+
+}
+
+.slide img::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 
+.slide img {
+    width: 100%;
+    height: auto;
+    transition: all 0.5s ease-in-out;
+
+}
+
+.slide.active {
+    opacity: 1;
+    position: relative;
+}
+
+.slideInfo {
+    position: absolute;
+    bottom: -31px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: var(--color-brand--main);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 100%;
+    transition: all 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+    .slideInfo p {
+        display: none;
+    }
+
+}
 
 /* Arrow buttons */
 .prevArrow,
 .nextArrow {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    background-color: var(--color-brand--transparent);
-    color: white;
+    transform: translateY(50%);
+    background-color: transparent;
+    color: var(--color-brand--main);
     border: none;
     border-radius: 50%;
     width: 40px;
@@ -68,16 +116,11 @@
     color: white;
 }
 
-img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
 
 .dots {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .dot {
