--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -54,24 +54,29 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-color: #000;
+    background-color: var(--color-brand--transparent);
+    transition: 0.5s;
+}
+
+.card .cardImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: 0.5s;
 }
 
 .card:hover img {
     opacity: 0.4;
     transition: 0.5s;
+    transform: scale(1.1);
 }
 
-.card:hover .cardImage {
-    transform: translateY(-100px);
-    transition: all 0.9s;
-}
+
 
 /**** Social Icons *****/
 .socialIcons {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
@@ -128,26 +133,35 @@
 /**** Personal Details ****/
 .details {
     position: absolute;
-    bottom: 0;
+    bottom: -20px;
     left: 0;
     background: #fff;
     width: 100%;
-    height: 120px;
-    z-index: 1;
-    padding: 10px;
+    height: 80px;
+    padding: 20px 10px;
+    border-radius: 0 0 16px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+}
+
+.card:hover .details {
+    bottom: 0;
+    z-index: 3;
+    transition: 0.5s;
 }
 
 .details h2 {
-    margin: 30px 0;
-    padding: 0;
+    padding-top: 10px;
     text-align: center;
+    text-transform: capitalize;
 }
 
-.details h2 .jobTitle {
-    font-size: 1rem;
-    line-height: 2.5rem;
-    color: #333;
-    font-weight: 300;
+.details .jobTitle {
+    color: #777;
+    padding-bottom: 20px;
 }
 
 
