--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@
 
 html {
     scroll-behavior: smooth;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 body {
@@ -58,7 +64,7 @@ body {
     }
 }
 
-/* 
+
 .landingPage {
     overflow: auto;
     scrollbar-width: none;
@@ -66,4 +72,4 @@ body {
 
 .landingPage::-webkit-scrollbar {
     display: none;
-} */
+}
