--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import "https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap";
-@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Cairo:slnt,wght@-11..11,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import 'https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap';
+
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Cairo:slnt,wght@-11..11,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,8 +11,7 @@
     --color-brand--400: #ffc71b;
     --color-brand--transparent: rgb(226, 124, 0, 0.5);
     --color-brand--dark: #451a03;
-    --color-brand--light: rgb(255, 252, 234, 0.7);
-
+    --color-brand--light: #fffceab3;
     --color-black: #242a2e;
     --color-white: #fff;
 }
@@ -36,7 +36,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-style: normal;
     line-height: 1.6;
