--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*::selection {
+    background-color: theme('colors.selectionBg'); 
+}*/
+
+* {
+    @apply transition-colors duration-300 ease-in-out;
+}
+
 :root {
     --color-brand--main: #e27c00;
     --color-brand--500: #ffa500;
@@ -17,6 +26,7 @@
 }
 
 * {
+
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
