--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }*/
 
 * {
-    @apply transition-all duration-300 ease-in-out;
+    @apply transition-colors duration-300 ease-in-out;
 }
 
 :root {
@@ -26,7 +26,6 @@
 }
 
 * {
-
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
